--- a/index.html
+++ b/index.html
@@ -201,6 +201,6 @@
         Get expert advice, nutrition tips, workout routines, and more delivered straight to your inbox. 
         Join today and take the first step toward a healthier, more balanced lifestyle!</p>
 
-        <a href=""
+        <a href="newsletter-form.html" target="_blank">Newsletter</a>
 </body>
 </html>
